[package]
name = "reloop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
async-graphql = { version = "5.0.6", features = ["playground", "time", "tracing", "apollo_tracing"] }
async-graphql-axum = "5.0.6"
axum = "0.6.7"
clap = { version = "4.1.11", features = ["derive"] }
dotenv = "0.15.0"
hyper = { version = "0.14.25", features = ["client"] }
reqwest = { version = "0.11.14", features = ["json"] }
serde = {version = "1.0.152", features = ["derive", ]}
time = {version = "0.3.19", features = ["formatting"]}
tokio = {version = "1.25.0", features = ["full"]}
tower = {version = "0.4.13", features = ["util", "timeout"] }
tower-http = {version = "0.3.5", features = ["add-extension", "trace"]}
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.16", features = ["env-filter"]}
